--- a/quote.html
+++ b/quote.html
@@ -118,22 +118,18 @@
             const areaMeters = google.maps.geometry.spherical.computeArea(polygon.getPath());
             const areaSqFt = areaMeters * 10.7639;
 
-            const basePrice = 40;
-            const ratePerSqFt = 0.009;
+            const basePrice = 50;
+            const ratePerSqFt = 0.010;
             const totalPrice = basePrice + areaSqFt * ratePerSqFt;
 
-            const oneTimeRatePerSqFt = ratePerSqFt + 0.005;
-            const oneTimePrice = basePrice + areaSqFt * oneTimeRatePerSqFt;
-
-            document.getElementById("result").innerHTML = `
+            document.getElementById("result").innerHTML = 
               <strong>📍 Dirección:</strong> ${results[0].formatted_address}<br>
               <strong>🧱 Tamaño:</strong> ${areaSqFt.toFixed(2)} sq ft<br>
-              <strong>💵 Precio Recurrente:</strong> $${totalPrice.toFixed(2)}<br>
-              <strong>💵 Precio Una Sola Vez:</strong> $${oneTimePrice.toFixed(2)}<br><br>
+              <strong>💵 Precio Estimado:</strong> $${totalPrice.toFixed(2)}<br><br>
               <button onclick="window.open('https://tampalawnpro.com/onboarding-demo-8560', '_blank')">
                 ✅ Book This Lawn Service
               </button>
-            `;
+            ;
           });
 
           document.getElementById("result").innerHTML = "✅ Usa la herramienta de polígono para dibujar tu césped";
@@ -149,3 +145,5 @@
   </script>
 </body>
 </html>
+
+
