--- a/quote.html
+++ b/quote.html
@@ -122,14 +122,14 @@
             const ratePerSqFt = 0.010;
             const totalPrice = basePrice + areaSqFt * ratePerSqFt;
 
-            document.getElementById("result").innerHTML = 
+            document.getElementById("result").innerHTML = `
               <strong>📍 Dirección:</strong> ${results[0].formatted_address}<br>
               <strong>🧱 Tamaño:</strong> ${areaSqFt.toFixed(2)} sq ft<br>
               <strong>💵 Precio Estimado:</strong> $${totalPrice.toFixed(2)}<br><br>
               <button onclick="window.open('https://tampalawnpro.com/onboarding-demo-8560', '_blank')">
                 ✅ Book This Lawn Service
               </button>
-            ;
+            `;
           });
 
           document.getElementById("result").innerHTML = "✅ Usa la herramienta de polígono para dibujar tu césped";
@@ -145,5 +145,3 @@
   </script>
 </body>
 </html>
-
-
