--- a/quote.html
+++ b/quote.html
@@ -118,14 +118,14 @@
             const areaMeters = google.maps.geometry.spherical.computeArea(polygon.getPath());
             const areaSqFt = areaMeters * 10.7639;
 
-            const basePrice = 50;
+            const basePrice = 40;
             const ratePerSqFt = 0.010;
             const totalPrice = basePrice + areaSqFt * ratePerSqFt;
 
             document.getElementById("result").innerHTML = `
               <strong>📍 Dirección:</strong> ${results[0].formatted_address}<br>
               <strong>🧱 Tamaño:</strong> ${areaSqFt.toFixed(2)} sq ft<br>
-              <strong>💵 Precio Estimado:</strong> $${totalPrice.toFixed(2)}<br><br>
+              <strong>💵 Precio Estimado Mensual:</strong> $${totalPrice.toFixed(2)}<br><br>
               <button onclick="window.open('https://tampalawnpro.com/onboarding-demo-8560', '_blank')">
                 ✅ Book This Lawn Service
               </button>
