--- a/quote.html
+++ b/quote.html
@@ -47,6 +47,16 @@
       box-shadow: 0 0 8px rgba(0,0,0,0.1);
     }
 
+    #frequency {
+      display: block;
+      margin: 10px auto;
+      font-size: 16px;
+      padding: 6px;
+      border-radius: 6px;
+      border: none;
+      font-weight: bold;
+    }
+
     button {
       background: #f4b400;
       color: black;
@@ -65,6 +75,12 @@
   </div>
   <h2>Cotización instantánea en línea</h2>
 
+  <select id="frequency">
+    <option value="one-time">Corte Único</option>
+    <option value="bi-weekly">Cada 2 Semanas</option>
+    <option value="monthly">Mensual</option>
+  </select>
+
   <div id="map"></div>
   <div id="result">🧭 Cargando el mapa...</div>
 
@@ -74,6 +90,15 @@
     function getQueryParam(key) {
       const params = new URLSearchParams(window.location.search);
       return params.get(key) || "";
+    }
+
+    function getRatePerSqFt(frequency) {
+      switch (frequency) {
+        case "one-time": return 0.007;
+        case "bi-weekly": return 0.0055;
+        case "monthly": return 0.006;
+        default: return 0.007;
+      }
     }
 
     function initMap() {
@@ -109,7 +134,7 @@
               editable: true,
               draggable: false
             }
-         });
+          });
 
           drawingManager.setMap(map);
 
@@ -118,20 +143,24 @@
             const areaMeters = google.maps.geometry.spherical.computeArea(polygon.getPath());
             const areaSqFt = areaMeters * 10.7639;
 
-            const basePrice = 50;
-            const ratePerSqFt = 0.009;
+            const frequency = document.getElementById("frequency").value;
+            const basePrice = 40;
+            const ratePerSqFt = getRatePerSqFt(frequency);
             const totalPrice = basePrice + areaSqFt * ratePerSqFt;
 
-            const oneTimeRatePerSqFt = ratePerSqFt + 0.0036014;
-            const oneTimePrice = basePrice + areaSqFt * oneTimeRatePerSqFt;
+            const frequencyLabel = {
+              "one-time": "Corte Único",
+              "bi-weekly": "Cada 2 Semanas",
+              "monthly": "Mensual"
+            };
 
             document.getElementById("result").innerHTML = `
               <strong>📍 Dirección:</strong> ${results[0].formatted_address}<br>
               <strong>🧱 Tamaño:</strong> ${areaSqFt.toFixed(2)} sq ft<br>
-              <strong>💵 Precio Recurrente:</strong> $${totalPrice.toFixed(2)}<br>
-              <strong>💵 Precio Una Sola Vez:</strong> $${oneTimePrice.toFixed(2)}<br><br>
+              <strong>📅 Frecuencia:</strong> ${frequencyLabel[frequency]}<br>
+              <strong>💵 Precio Estimado:</strong> $${totalPrice.toFixed(2)}<br><br>
               <button onclick="window.open('https://tampalawnpro.com/onboarding-demo-8560', '_blank')">
-                ✅ Book This Lawn Service
+                ✅ Reservar este servicio
               </button>
             `;
           });
@@ -149,3 +178,4 @@
   </script>
 </body>
 </html>
+  
