--- a/quote.html
+++ b/quote.html
@@ -120,9 +120,9 @@
 
             const basePrice = 40;
             const rates = {
-              "Corte Único": 0.007,
-              "Cada 2 Semanas": 0.0055,
-              "Mensual": 0.006
+              "Corte Único": 0.00037,
+              "Cada 2 Semanas": 0.0040,
+              "Semanal": 0.009
             };
 
             const prices = Object.entries(rates).map(([label, rate]) => {
