--- a/quote.html
+++ b/quote.html
@@ -137,7 +137,7 @@
               <strong>🧱 Tamaño:</strong> ${areaSqFt.toFixed(2)} sq ft<br><br>
               ${prices.map(p => `
                 <strong>📅 Frecuencia:</strong> ${p.label}<br>
-                <strong>💵 Precio Estimado:</strong> $${p.price}<br><br>
+                <strong>💵 Precio Estimado Mensual:</strong> $${p.price}<br><br>
               `).join("")}
               <button onclick="window.open('https://tampalawnpro.com/onboarding-demo-8560', '_blank')">
                 ✅ Reservar este servicio
