--- a/quote.html
+++ b/quote.html
@@ -139,7 +139,7 @@
                 <strong>📅 Frecuencia:</strong> ${p.label}<br>
                 <strong>💵 Precio Estimado Mensual:</strong> $${p.price}<br><br>
               `).join("")}
-              <button onclick="window.open('https://tampalawnpro.com/onboarding-demo-8560', '_blank')">
+              <button onclick="window.open('https://link.fastpaydirect.com/payment-link/6849daea21150331d0bbc8ce', '_blank')">
                 ✅ Reservar este servicio
               </button>
             `;
