--- a/index.html
+++ b/index.html
@@ -43,12 +43,9 @@
       font-weight: bold;
     }
 
-    #result {
+    #extraForm {
+      display: none;
       margin-top: 20px;
-      background: white;
-      color: black;
-      padding: 15px;
-      border-radius: 10px;
     }
   </style>
 </head>
@@ -65,7 +62,14 @@
       autocomplete="off"
     />
 
-    <button onclick="openQuoteWindow()" class="lookup-button">Busca y Dibuja →</button>
+    <button onclick="showExtraForm()" class="lookup-button">Busca y Dibuja →</button>
+
+    <div id="extraForm">
+      <input type="text" id="fullName" class="lookup-input" placeholder="Nombre Completo" required>
+      <input type="tel" id="phone" class="lookup-input" placeholder="Teléfono" required>
+      <input type="email" id="email" class="lookup-input" placeholder="Correo Electrónico" required>
+      <button onclick="openQuoteWindow()" class="lookup-button">Continuar →</button>
+    </div>
 
     <div id="result"></div>
   </div>
@@ -73,14 +77,34 @@
   <script>
     let selectedPlaceId = null;
 
-    function openQuoteWindow() {
-      const input = document.getElementById("addressInput").value.trim();
-      if (!input) {
-        alert("❌ Please enter a valid address.");
+    function showExtraForm() {
+      const address = document.getElementById("addressInput").value.trim();
+      if (!address) {
+        alert("❌ Por favor, ingresa una dirección válida.");
         return;
       }
-      const encoded = encodeURIComponent(input);
-      window.open(`quote.html?address=${encoded}`, '_blank');
+      document.getElementById("extraForm").style.display = "block";
+    }
+
+    function openQuoteWindow() {
+      const address = document.getElementById("addressInput").value.trim();
+      const name = document.getElementById("fullName").value.trim();
+      const phone = document.getElementById("phone").value.trim();
+      const email = document.getElementById("email").value.trim();
+
+      if (!name || !phone || !email) {
+        alert("❌ Por favor, completa todos los campos.");
+        return;
+      }
+
+      const params = new URLSearchParams({
+        address,
+        name,
+        phone,
+        email
+      });
+
+      window.open(`quote.html?${params.toString()}`, '_blank');
     }
 
     function initAutocomplete() {
@@ -99,7 +123,7 @@
     }
   </script>
 
-  <!-- ✅ Load Google Maps Places API for Autocomplete -->
+  <!-- Google Maps Places API -->
   <script async
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC3EJTm3D0afQzZebyLovtODu0DXGlQAPg&libraries=places&callback=initAutocomplete">
   </script>
