--- a/quote.html
+++ b/quote.html
@@ -9,7 +9,7 @@
       font-family: sans-serif;
       margin: 0;
       padding: 0;
-      background: transparent;
+      background: #064d2e;
     }
 
     .logo-container {
@@ -41,10 +41,10 @@
 
     #result {
       margin: 20px;
-      background: rgba(255, 255, 255, 0.8); /* semi-transparent background */
+      background: white;
       padding: 15px;
       border-radius: 10px;
-      box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 0 8px rgba(0,0,0,0.1);
     }
 
     button {
