--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <style>
     body {
       font-family: sans-serif;
-      background: #1a8f4d;
+      background: transparent;
       margin: 0;
       padding: 20px;
       display: flex;
@@ -18,13 +18,13 @@
     }
 
     .lookup-box {
-      background: #2b2b2b;
+      background: rgba(43, 43, 43, 0.8); /* semi-transparent box */
       color: white;
       border-radius: 10px;
       padding: 20px;
       max-width: 640px;
       width: 100%;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
     }
 
     .lookup-input, .lookup-button {
