--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <style>
     body {
       font-family: sans-serif;
-      background: #1a8f4d;
+      background: transparent;
       margin: 0;
       padding: 20px;
       display: flex;
