--- a/index.html
+++ b/index.html
@@ -16,98 +16,73 @@
       align-items: flex-start;
       min-height: 100vh;
     }
-
     .lookup-box {
       background: #2b2b2b;
-      color: white;
+      color: #fff;
       border-radius: 10px;
       padding: 20px;
       max-width: 640px;
       width: 100%;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+      box-shadow: 0 4px 10px rgba(0,0,0,.3);
     }
-
     .lookup-input, .lookup-button {
-      font-size: 16px;
-      border-radius: 8px;
-      border: none;
-      padding: 12px;
-      margin-bottom: 10px;
-      width: 100%;
+      width: 100%; padding: 12px; border: none; border-radius: 8px;
+      font-size: 16px; margin-bottom: 10px;
     }
-
-    .lookup-input {
-      color: #333;
-    }
-
-    .lookup-button {
-      background-color: #f4b400;
-      color: #000;
-      cursor: pointer;
-      font-weight: bold;
-    }
-
-    iframe {
-      width: 100%;
-      height: 700px;
-      border: none;
-      border-radius: 10px;
-      margin-top: 20px;
-      display: block;
-    }
-
-    .centered {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
+    .lookup-input { color:#333; }
+    .lookup-button { background:#f4b400; font-weight:bold; cursor:pointer; }
+    iframe { width:100%; height:700px; border:none; border-radius:10px; margin-top:20px; display:block; }
+    .centered { display:flex; flex-direction:column; align-items:center; }
   </style>
 </head>
 <body>
   <div class="lookup-box centered">
-    <h2 style="text-align: center;">Cotización Instantánea</h2>
+    <h2 style="text-align:center">Cotización Instantánea</h2>
 
-    <input
-      type="search"
-      id="addressInput"
-      class="lookup-input"
-      placeholder="1234 Main Street, City, State"
-      autocomplete="off"
-    />
+    <input id="addressInput" class="lookup-input"
+           placeholder="1234 Main Street, City, State" type="search" autocomplete="off">
 
-    <button onclick="loadForm()" class="lookup-button">Empieza →</button>
+    <button class="lookup-button" onclick="loadForm()">Empieza →</button>
 
-    <div id="iframeSection" style="display:none; width: 100%;">
-      <iframe id="contentFrame" src=""></iframe>
-      <button onclick="loadQuote()" class="lookup-button">Continuar al Mapa →</button>
-    </div>
+    <iframe id="contentFrame" style="display:none"></iframe>
   </div>
 
   <script>
+    const FORM_URL  = "https://api.leadconnectorhq.com/widget/form/M1VjpXSx2cIFN2ghPme6";
+    const MAP_PAGE  = "quote.html";               // change if you rename the map page
+    let quoteOpened = false;
+
+    /* Load LeadConnector form after address step */
     function loadForm() {
-      const address = document.getElementById("addressInput").value.trim();
-      if (!address) {
-        alert("❌ Por favor, ingresa una dirección válida.");
-        return;
-      }
+      const address = addressInput.value.trim();
+      if (!address) return alert("❌ Por favor ingresa una dirección válida.");
+      sessionStorage.setItem("userAddress", address);
 
-      window.sessionStorage.setItem("userAddress", address);
-      document.getElementById("contentFrame").src = "https://api.leadconnectorhq.com/widget/form/M1VjpXSx2cIFN2ghPme6";
-      document.getElementById("iframeSection").style.display = "block";
+      const frame = document.getElementById("contentFrame");
+      frame.src            = FORM_URL;
+      frame.style.display  = "block";
     }
 
-    function loadQuote() {
-      const address = window.sessionStorage.getItem("userAddress") || "";
-      const encoded = encodeURIComponent(address);
-      document.getElementById("contentFrame").src = `quote.html?address=${encoded}`;
+    /* Listen for form-submission signal coming from the iframe */
+    window.addEventListener("message", (e) => {
+      if (quoteOpened) return;                                    // only once
+      if (!e.origin.includes("leadconnectorhq.com")) return;      // security check
+      if (e.data && e.data.event === "lcFormSubmitted") openQuote();
+    });
+
+    /* Open map/quote in a new tab */
+    function openQuote() {
+      quoteOpened = true;
+      const addr = encodeURIComponent(sessionStorage.getItem("userAddress") || "");
+      window.open(`${MAP_PAGE}?address=${addr}`, "_blank");
     }
 
+    /* Google Places Autocomplete for the address box */
     function initAutocomplete() {
-      const input = document.getElementById("addressInput");
-      const autocomplete = new google.maps.places.Autocomplete(input, {
-        types: ['address'],
-        componentRestrictions: { country: "us" }
-      });
+      new google.maps.places.Autocomplete(
+        addressInput,
+        { types:["address"], componentRestrictions:{ country:"us" } }
+      );
     }
   </script>
 
