--- a/index.html
+++ b/index.html
@@ -1,94 +1,126 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Instant Lawn Quote</title>
-  <meta name="theme-color" content="#343434">
+  <title>Cotización Instantánea</title>
   <style>
     body {
-      font-family: sans-serif;
-      background: transparent;
       margin: 0;
-      padding: 20px;
-      display: flex;
-      justify-content: center;
-      align-items: flex-start;
-      min-height: 100vh;
-    }
-    .lookup-box {
-      background: #2b2b2b;
+      font-family: sans-serif;
+      background-color: #222;
       color: #fff;
-      border-radius: 10px;
-      padding: 20px;
-      max-width: 640px;
+    }
+
+    .container {
+      max-width: 720px;
+      margin: 20px auto;
+      text-align: center;
+      padding: 0 20px;
+    }
+
+    input[type="text"] {
       width: 100%;
-      box-shadow: 0 4px 10px rgba(0,0,0,.3);
+      padding: 14px;
+      border-radius: 8px;
+      font-size: 16px;
+      border: none;
+      margin-bottom: 12px;
     }
-    .lookup-input, .lookup-button {
-      width: 100%; padding: 12px; border: none; border-radius: 8px;
-      font-size: 16px; margin-bottom: 10px;
+
+    button {
+      width: 100%;
+      padding: 14px;
+      font-size: 16px;
+      font-weight: bold;
+      background-color: #f4b400;
+      color: #000;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
     }
-    .lookup-input { color:#333; }
-    .lookup-button { background:#f4b400; font-weight:bold; cursor:pointer; }
-    iframe { width:100%; height:700px; border:none; border-radius:10px; margin-top:20px; display:block; }
-    .centered { display:flex; flex-direction:column; align-items:center; }
+
+    .iframe-wrapper {
+      position: relative;
+      width: 100%;
+      height: 1000px;
+      margin-top: 30px;
+      background-image: url('https://assets.cdn.filesafe.space/SEMmeWOBlogS8eeis0N9/media/684c93c4bc1beadf6fd42ef9.png');
+      background-size: cover;
+      background-position: center;
+      border-radius: 14px;
+      overflow: hidden;
+    }
+
+    iframe {
+      width: 100%;
+      height: 1000px;
+      border: none;
+      background-color: transparent;
+    }
   </style>
 </head>
 <body>
-  <div class="lookup-box centered">
-    <h2 style="text-align:center">Cotización Instantánea</h2>
 
-    <input id="addressInput" class="lookup-input"
-           placeholder="1234 Main Street, City, State" type="search" autocomplete="off">
+  <div class="container">
+    <h2>Cotización Instantánea</h2>
+    <input type="text" id="addressInput" placeholder="10013 Cypress Shadow Avenue, Tampa, FL, USA">
+    <button onclick="loadForm()">Empieza →</button>
+  </div>
 
-    <button class="lookup-button" onclick="loadForm()">Empieza →</button>
-
-    <iframe id="contentFrame" style="display:none"></iframe>
+  <div class="iframe-wrapper">
+    <iframe 
+      id="contentFrame"
+      src=""
+      allowtransparency="true"
+      title="Formulario de Contacto"
+      loading="lazy">
+    </iframe>
   </div>
 
   <script>
-    const FORM_URL  = "https://api.leadconnectorhq.com/widget/form/M1VjpXSx2cIFN2ghPme6";
-    const MAP_PAGE  = "quote.html";               // change if you rename the map page
     let quoteOpened = false;
 
-    /* Load LeadConnector form after address step */
     function loadForm() {
-      const address = addressInput.value.trim();
-      if (!address) return alert("❌ Por favor ingresa una dirección válida.");
+      const address = document.getElementById("addressInput").value.trim();
+      if (!address) {
+        alert("❌ Por favor, ingresa una dirección válida.");
+        return;
+      }
+
       sessionStorage.setItem("userAddress", address);
-
       const frame = document.getElementById("contentFrame");
-      frame.src            = FORM_URL;
-      frame.style.display  = "block";
+      frame.src = "https://api.leadconnectorhq.com/widget/form/M1VjpXSx2cIFN2ghPme6";
     }
 
-    /* Listen for form-submission signal coming from the iframe */
-    window.addEventListener("message", (e) => {
-      if (quoteOpened) return;                                    // only once
-      if (!e.origin.includes("leadconnectorhq.com")) return;      // security check
-      if (e.data && e.data.event === "lcFormSubmitted") openQuote();
+    function watchForThankYouMessage() {
+      const frame = document.getElementById("contentFrame");
+
+      const checkMessage = () => {
+        try {
+          const innerDoc = frame.contentDocument || frame.contentWindow.document;
+          const message = innerDoc.body.textContent || "";
+
+          if (
+            !quoteOpened &&
+            message.toLowerCase().includes("thank you for taking the time")
+          ) {
+            quoteOpened = true;
+            const addr = encodeURIComponent(sessionStorage.getItem("userAddress") || "");
+            window.open(`quote.html?address=${addr}`, "_blank");
+          }
+        } catch (e) {
+          // Cross-origin protection (ignore until it's ready)
+        }
+      };
+
+      setInterval(checkMessage, 1000);
+    }
+
+    window.addEventListener("DOMContentLoaded", () => {
+      watchForThankYouMessage();
     });
-
-    /* Open map/quote in a new tab */
-    function openQuote() {
-      quoteOpened = true;
-      const addr = encodeURIComponent(sessionStorage.getItem("userAddress") || "");
-      window.open(`${MAP_PAGE}?address=${addr}`, "_blank");
-    }
-
-    /* Google Places Autocomplete for the address box */
-    function initAutocomplete() {
-      new google.maps.places.Autocomplete(
-        addressInput,
-        { types:["address"], componentRestrictions:{ country:"us" } }
-      );
-    }
   </script>
 
-  <!-- Google Places API -->
-  <script async
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC3EJTm3D0afQzZebyLovtODu0DXGlQAPg&libraries=places&callback=initAutocomplete">
-  </script>
 </body>
 </html>
