--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cotización Instantánea</title>
   <style>
@@ -11,14 +11,12 @@
       background-color: #222;
       color: #fff;
     }
-
     .container {
       max-width: 700px;
       margin: 30px auto;
       text-align: center;
       padding: 0 20px;
     }
-
     input[type="text"] {
       width: 100%;
       padding: 14px;
@@ -27,7 +25,6 @@
       border: none;
       margin-bottom: 12px;
     }
-
     button {
       width: 100%;
       padding: 14px;
@@ -39,86 +36,84 @@
       border-radius: 8px;
       cursor: pointer;
     }
-
     .iframe-wrapper {
-      position: relative;
-      width: 100%;
-      height: 1000px;
       margin-top: 30px;
-      background-image: url('https://assets.cdn.filesafe.space/SEMmeWOBlogS8eeis0N9/media/684c93c4bc1beadf6fd42ef9.png');
-      background-size: cover;
-      background-position: center;
-      border-radius: 14px;
-      overflow: hidden;
+      display: none;
     }
-
     iframe {
       width: 100%;
-      height: 1000px;
+      height: 800px;
       border: none;
-      background-color: transparent;
+      border-radius: 14px;
+      background: transparent;
     }
   </style>
 </head>
 <body>
 
-  <div class="container">
-    <h2>Cotización Instantánea</h2>
-    <input type="text" id="addressInput" placeholder="Ingresa tu dirección aquí">
-    <button onclick="loadForm()">Empieza →</button>
+<div class="container">
+  <h2>1️⃣ Ingresa tu dirección</h2>
+  <input type="text" id="addressInput" placeholder="Escribe tu dirección aquí...">
+  <button onclick="startStep2()">Continuar →</button>
+
+  <div id="step2" class="iframe-wrapper">
+    <h2>2️⃣ Completa tus datos</h2>
+    <iframe id="formFrame" src="" title="Formulario de Contacto"></iframe>
   </div>
+</div>
 
-  <div class="iframe-wrapper">
-    <iframe 
-      id="contentFrame"
-      src=""
-      allowtransparency="true"
-      title="Formulario GHL"
-      loading="lazy">
-    </iframe>
-  </div>
+<script>
+  let quoteOpened = false;
 
-  <script>
-    let quoteOpened = false;
-
-    function loadForm() {
-      const address = document.getElementById("addressInput").value.trim();
-      if (!address) {
-        alert("❌ Por favor, ingresa una dirección válida.");
-        return;
-      }
-
-      sessionStorage.setItem("userAddress", address);
-      document.getElementById("contentFrame").src =
-        "https://api.leadconnectorhq.com/widget/form/M1VjpXSx2cIFN2ghPme6";
+  function startStep2() {
+    const address = document.getElementById("addressInput").value.trim();
+    if (!address) {
+      alert("❌ Por favor, ingresa una dirección válida.");
+      return;
     }
 
-    function watchForThankYouMessage() {
-      const frame = document.getElementById("contentFrame");
+    sessionStorage.setItem("userAddress", address);
 
-      const checkMessage = () => {
-        try {
-          const innerDoc = frame.contentDocument || frame.contentWindow.document;
-          const message = innerDoc.body.textContent || "";
+    // Show GHL form
+    document.getElementById("step2").style.display = "block";
+    document.getElementById("formFrame").src =
+      "https://api.leadconnectorhq.com/widget/form/M1VjpXSx2cIFN2ghPme6";
 
-          if (
-            !quoteOpened &&
-            message.toLowerCase().includes("thank you for taking the time")
-          ) {
-            quoteOpened = true;
-            const addr = encodeURIComponent(sessionStorage.getItem("userAddress") || "");
-            window.open(`quote.html?address=${addr}`, "_blank");
-          }
-        } catch (e) {
-          // Ignore while iframe loads
+    startThankYouWatcher();
+  }
+
+  function startThankYouWatcher() {
+    const frame = document.getElementById("formFrame");
+
+    const timer = setInterval(() => {
+      try {
+        const doc = frame.contentDocument || frame.contentWindow.document;
+        const text = (doc.body.textContent || '').toLowerCase();
+
+        if (!quoteOpened && text.includes('thank you for taking the time')) {
+          quoteOpened = true;
+          clearInterval(timer);
+
+          const addr = encodeURIComponent(sessionStorage.getItem('userAddress') || '');
+          window.open(`quote.html?address=${addr}`, '_blank');
         }
-      };
+      } catch {}
+    }, 1000);
+  }
 
-      setInterval(checkMessage, 1000);
-    }
+  function initAutocomplete() {
+    const input = document.getElementById("addressInput");
+    new google.maps.places.Autocomplete(input, {
+      types: ["address"],
+      componentRestrictions: { country: "us" }
+    });
+  }
+</script>
 
-    window.addEventListener("DOMContentLoaded", watchForThankYouMessage);
-  </script>
+<!-- Google Places Autocomplete -->
+<script async
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC3EJTm3D0afQzZebyLovtODu0DXGlQAPg&libraries=places&callback=initAutocomplete">
+</script>
 
 </body>
 </html>
