--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -89,8 +90,9 @@
       try {
         const doc = frame.contentDocument || frame.contentWindow.document;
         const text = (doc.body.textContent || '').toLowerCase();
+        console.log("FORM TEXT:", text);
 
-        if (!quoteOpened && text.includes('thank you for taking the time')) {
+        if (!quoteOpened && text.match(/thank\s*you/i)) {
           quoteOpened = true;
           clearInterval(timer);
 
