--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -6,121 +5,140 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cotización Instantánea</title>
   <style>
-    body {
-      margin: 0;
-      font-family: sans-serif;
-      background-color: #222;
-      color: #fff;
+    :root{
+      --brand-yellow:#f4b400;
+      --bg-dark-green:#064d2e;
     }
-    .container {
-      max-width: 700px;
-      margin: 30px auto;
-      text-align: center;
-      padding: 0 20px;
+    *{box-sizing:border-box;margin:0;padding:0;font-family:sans-serif;}
+
+    body{
+      background:var(--bg-dark-green);
+      color:#fff;
+      display:flex;
+      justify-content:center;
+      align-items:flex-start;
+      min-height:100vh;
     }
-    input[type="text"] {
-      width: 100%;
-      padding: 14px;
-      border-radius: 8px;
-      font-size: 16px;
-      border: none;
-      margin-bottom: 12px;
+
+    .container{
+      width:100%;
+      max-width:700px;
+      padding:20px;
+      text-align:center;
     }
-    button {
-      width: 100%;
-      padding: 14px;
-      font-size: 16px;
-      font-weight: bold;
-      background-color: #f4b400;
-      color: #000;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
+
+    /* logo */
+    .logo{
+      max-width:140px;
+      height:auto;
+      display:block;
+      margin:0 auto 12px;
     }
-    .iframe-wrapper {
-      margin-top: 30px;
-      display: none;
+
+    h2{
+      font-size:1.3rem;
+      margin-bottom:18px;
     }
-    iframe {
-      width: 100%;
-      height: 800px;
-      border: none;
-      border-radius: 14px;
-      background: transparent;
+
+    input[type="text"],
+    button{
+      width:100%;
+      padding:14px;
+      font-size:16px;
+      border:none;
+      border-radius:8px;
+    }
+
+    input[type="text"]{
+      margin-bottom:12px;
+    }
+
+    button{
+      font-weight:700;
+      background:var(--brand-yellow);
+      color:#000;
+      cursor:pointer;
+    }
+
+    .iframe-wrapper{
+      margin-top:28px;
+      display:none;
+    }
+
+    iframe{
+      width:100%;
+      height:800px;
+      border:none;
+      border-radius:14px;
+      background:transparent;
     }
   </style>
 </head>
 <body>
 
-<div class="container">
-  <h2>1️⃣ Ingresa tu dirección</h2>
-  <input type="text" id="addressInput" placeholder="Escribe tu dirección aquí...">
-  <button onclick="startStep2()">Continuar →</button>
+  <div class="container">
+    <!-- logo -->
+    <img class="logo" src="https://assets.cdn.filesafe.space/SEMmeWOBlogS8eeis0N9/media/6844d3302c95c5e74ec2c7a6.png" alt="TampaLawnPro logo">
 
-  <div id="step2" class="iframe-wrapper">
-    <h2>2️⃣ Completa tus datos</h2>
-    <iframe id="formFrame" src="" title="Formulario de Contacto"></iframe>
+    <h2>1️⃣ Ingresa tu dirección</h2>
+
+    <input type="text" id="addressInput" placeholder="Escribe tu dirección aquí…" />
+
+    <button onclick="startStep2()">Continuar →</button>
+
+    <div id="step2" class="iframe-wrapper">
+      <h2>2️⃣ Completa tus datos</h2>
+      <iframe id="formFrame" title="Formulario de Contacto"></iframe>
+    </div>
   </div>
-</div>
 
 <script>
-  let quoteOpened = false;
+  let quoteOpened=false;
 
-  function startStep2() {
-    const address = document.getElementById("addressInput").value.trim();
-    if (!address) {
+  function startStep2(){
+    const address=document.getElementById("addressInput").value.trim();
+    if(!address){
       alert("❌ Por favor, ingresa una dirección válida.");
       return;
     }
+    sessionStorage.setItem("userAddress",address);
 
-    sessionStorage.setItem("userAddress", address);
-
-    document.getElementById("step2").style.display = "block";
-    document.getElementById("formFrame").src =
-      "https://api.leadconnectorhq.com/widget/form/M1VjpXSx2cIFN2ghPme6";
-
-    startThankYouWatcher();
+    const step2=document.getElementById("step2");
+    const frame=document.getElementById("formFrame");
+    step2.style.display="block";
+    frame.src="https://api.leadconnectorhq.com/widget/form/M1VjpXSx2cIFN2ghPme6";
+    watchThankYou(frame);
   }
 
-  function startThankYouWatcher() {
-    const frame = document.getElementById("formFrame");
-
-    const timer = setInterval(() => {
-      try {
-        const doc = frame.contentDocument || frame.contentWindow.document;
-        const bodyText = doc.body?.innerText.toLowerCase() || "";
-        const matchThankYou = /thank\s*you|gracias/.test(bodyText);
-
-        if (!quoteOpened && matchThankYou) {
-          quoteOpened = true;
+  function watchThankYou(frame){
+    const timer=setInterval(()=>{
+      try{
+        const doc=frame.contentDocument||frame.contentWindow.document;
+        const bodyText=(doc.body?.innerText||"").toLowerCase();
+        if(!quoteOpened && /thank\\s*you|gracias/.test(bodyText)){
+          quoteOpened=true;
           clearInterval(timer);
-
-          // Use animation frame to increase success rate with popup blockers
-          requestAnimationFrame(() => {
-            const addr = encodeURIComponent(sessionStorage.getItem('userAddress') || '');
-            window.open(`quote.html?address=${addr}`, '_blank');
+          requestAnimationFrame(()=>{
+            const addr=encodeURIComponent(sessionStorage.getItem("userAddress")||"");
+            window.open(`quote.html?address=${addr}`,'_blank');
           });
         }
-      } catch {
-        // Try again on next tick
-      }
-    }, 1000);
+      }catch{/* cross-origin, just keep polling */}
+    },1000);
   }
 
-  function initAutocomplete() {
-    const input = document.getElementById("addressInput");
-    new google.maps.places.Autocomplete(input, {
-      types: ["address"],
-      componentRestrictions: { country: "us" }
-    });
+  function initAutocomplete(){
+    new google.maps.places.Autocomplete(
+      document.getElementById("addressInput"),
+      {types:["address"],componentRestrictions:{country:"us"}}
+    );
   }
 </script>
-
 
 <!-- Google Places Autocomplete -->
 <script async
   src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC3EJTm3D0afQzZebyLovtODu0DXGlQAPg&libraries=places&callback=initAutocomplete">
 </script>
-
 </body>
 </html>
+
