--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
   <div class="container">
     <!-- logo -->
-    <img class="logo" src="https://assets.cdn.filesafe.space/SEMmeWOBlogS8eeis0N9/media/6844d3302c95c5e74ec2c7a6.png" alt="TampaLawnPro logo">
+    <img class="logo" src="https://assets.cdn.filesafe.space/SEMmeWOBlogS8eeis0N9/media/6851d0b9f2d4613ffd6c47cd.png" alt="LawnPro logo">
 
     <h2>1️⃣ Ingresa tu dirección</h2>
 
