--- a/quote.html
+++ b/quote.html
@@ -110,9 +110,9 @@
               /* Pricing */
               const basePrice = 40;
               const rates = {
-                "Corte Único":         0.00037,
-                "Cada 2 Semanas":      0.0040,
-                "Semanal":             0.009
+                "Corte Único":         0.00040,
+                "Cada 2 Semanas":      0.0040=5,
+                "Semanal":             0.010
               };
               const prices = Object.entries(rates).map(([label, r])=>({
                 label,
