--- a/quote.html
+++ b/quote.html
@@ -111,7 +111,7 @@
               const basePrice = 40;
               const rates = {
                 "Corte Único":         0.00040,
-                "Cada 2 Semanas":      0.0040=5,
+                "Cada 2 Semanas":      0.00050,
                 "Semanal":             0.010
               };
               const prices = Object.entries(rates).map(([label, r])=>({
